# config

./: Makefile  README.md  pyproject.toml
src/config/: cli.py
src/get_config/: cli.py
