[project]
name = "config"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [{ name = "Cooper Ellidge", email = "cooper.ellidge@gmail.com" }]
requires-python = ">=3.13"
dependencies = ["requests>=2.32.3", "typer>=0.15.1"]

[project.scripts]
get-config = "config.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = ["mypy>=1.14.1", "ruff>=0.9.3", "types-requests>=2.32.0.20241016"]


[tool.ruff]
target-version = "py310"

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "COM812", # Avoid conflict with formatter
    "D100",   # Package level docstrings are a bit weird
    "D104",   # Module level docstrings are a bit weird
    "D105",   # Docstrings on dunder methods are a bit weird
    "TD",     # I like todos
    "FIX002", # I still like todos
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"tests/*" = [
    "D",    # Test names should be clear, with docstring being optional
    "S101", # Asserts are needed for tests
]
